// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input - basic functionality: input has correct props 1`] = `
Object {
  "aria-describedby": null,
  "aria-invalid": false,
  "aria-label": null,
  "aria-labelledby": null,
  "aria-required": false,
  "children": null,
  "disabled": false,
  "id": undefined,
  "name": "",
  "onBlur": [Function],
  "onChange": [MockFunction],
  "onFocus": [Function],
  "onKeyDown": [MockFunction],
  "onKeyPress": [MockFunction],
  "onKeyUp": [MockFunction],
  "placeholder": "Placeholder",
  "styled-component": "true",
  "type": "text",
  "value": "input value",
}
`;

exports[`Input - renders enhancers: input has correct props when end enhancers added 1`] = `
Object {
  "$adjoined": "right",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
  "children": Array [
    <NullComponent
      $adjoined="right"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
    <MockStyledComponent
      $adjoined="right"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $ref={
        Object {
          "current": null,
        }
      }
      $required={false}
      $size="default"
      aria-describedby={null}
      aria-invalid={false}
      aria-label={null}
      aria-labelledby={null}
      aria-required={false}
      disabled={false}
      name=""
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      type="text"
    />,
    <NullComponent
      $adjoined="right"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
  ],
  "data-baseweb": "base-input",
}
`;

exports[`Input - renders enhancers: input has correct props when enhancers added 1`] = `
Object {
  "$adjoined": "both",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
  "children": Array [
    <NullComponent
      $adjoined="both"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
    <MockStyledComponent
      $adjoined="both"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $ref={
        Object {
          "current": null,
        }
      }
      $required={false}
      $size="default"
      aria-describedby={null}
      aria-invalid={false}
      aria-label={null}
      aria-labelledby={null}
      aria-required={false}
      disabled={false}
      name=""
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      type="text"
    />,
    <NullComponent
      $adjoined="both"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
  ],
  "data-baseweb": "base-input",
}
`;

exports[`Input - renders enhancers: input has correct props when start enhancers added 1`] = `
Object {
  "$adjoined": "left",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
  "children": Array [
    <NullComponent
      $adjoined="left"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
    <MockStyledComponent
      $adjoined="left"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $ref={
        Object {
          "current": null,
        }
      }
      $required={false}
      $size="default"
      aria-describedby={null}
      aria-invalid={false}
      aria-label={null}
      aria-labelledby={null}
      aria-required={false}
      disabled={false}
      name=""
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      type="text"
    />,
    <NullComponent
      $adjoined="left"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
  ],
  "data-baseweb": "base-input",
}
`;
